--- a/flexbox/0-styles.css
+++ b/flexbox/0-styles.css
@@ -181,6 +181,7 @@
       ============================= */
 /* removed ul from ul.row */
   .row {
+    display: flex;
     margin: 0;
     padding: 0;
     list-style: none;
