--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -206,7 +206,7 @@
     float: right;
   } */
 
-  .nav {
+  .nav .nav-item + nav-item {
     display: flex;
     margin: 0;
     padding: 0;
@@ -214,7 +214,7 @@
     text-align: center;
   }
 
-  .nav .nav-item + nav-item {
+  .nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
