--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -214,7 +214,7 @@
     text-align: center;
   }
 
-  .nav-item + .nav-item {
+  .nav .nav-item + .nav-item {
     margin: var(--nav-item-margin);
   }
 
