reverted back to previous code

--- a/flexbox/10-styles.css
+++ b/flexbox/10-styles.css
@@ -24,7 +24,6 @@
     --color-dark-grey: #353535;
 
     --text-color: var(--color-black);
-    --text-color: var(--color-white);
 
     --font-family-base: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-family-title: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -377,7 +376,7 @@
   }
 
   .section-hero .section-category * {
-    color: var(--text-color);
+    --button-color: var(--color-white);
     text-transform: uppercase;
   }
 
