changed styling in section hero

--- a/flexbox/10-styles.css
+++ b/flexbox/10-styles.css
@@ -376,7 +376,7 @@
   }
 
   .section-hero .section-category {
-    --color-white: #ffffff;
+    color: var(--color-white);
     text-transform: uppercase;
   }
 
