--- a/flexbox/11-styles.css
+++ b/flexbox/11-styles.css
@@ -552,8 +552,8 @@
     background-position: 50% 0;
   }
 
-  .hero-aritcle ::before {
-    content: empty;
+  .hero-aritcle::before {
+    content:"";
     background: rgba(0, 0, 0, 0.8);
     position: absolute;
     top: 0;
