--- a/sass_scss/3-nested_tag.scss
+++ b/sass_scss/3-nested_tag.scss
@@ -1,10 +1,10 @@
 // Using nested declarations, apply styles to body and p tags
 body {
-  margin: 0;
-  padding: 0;
-}
+  margin: 0px;
+  padding: 0px;
 
   // Nested
   p {
     margin: 10px;
   }
+}
