--- a/form/02-styles.css
+++ b/form/02-styles.css
@@ -670,10 +670,24 @@
     margin: 0;
   }
 
+/* Task 1 Styling
+    ============================= */
+
   fieldset {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     border: 0;
     padding: 0 0 2rem;
+  }
+
+/* Task 2 Styling
+    ============================= */
+
+  label {
+    cursor: pointer;
+    display: block;
+    white-space: nowrap;
+    font-size: 1.4rem;
+    padding: 0 0 .5rem;
   }
