--- a/form/04-styles.css
+++ b/form/04-styles.css
@@ -703,5 +703,21 @@
     background-color: var(--color-white);
     box-shadow: none;
     outline: 0;
-    
+  }
+
+  input[type="text"],
+  input[type="email"] {
+    padding-right: 3rem;
+  }
+
+  input[type="text"]:focus,
+  input[type="email"]:focus,
+  textarea:focus {
+    border: .1rem solid var(--color-grey);
+    background-color: var(--color-light-grey);
+  }
+
+  ::placeholder {
+    font-style: italic;
+    font-size: var(--font-size-small);
   }
