--- a/form/06-styles.css
+++ b/form/06-styles.css
@@ -155,8 +155,8 @@
   }
 
   .button-primary:hover {
-    color: var(--color-primary);
-    background: var(--color-white);
+    color: var(--color-white);
+    background: var(--color-primary);
   }
 
   /* Helpers
