--- a/form/06-styles.css
+++ b/form/06-styles.css
@@ -154,6 +154,11 @@
     transition-property: color, background-color;
   }
 
+  .button-primary {
+    color: var(--color-white);
+    background: var(--color-primary);
+  }
+
   .button-primary:hover {
     color: var(--color-primary);
     background: var(--color-white);
