took off the rem in one of the rules

--- a/form/07-styles.css
+++ b/form/07-styles.css
@@ -865,7 +865,7 @@
   .form-search input[type="search"]:focus {
     position: relative;
     width: 15rem;
-    z-index: 1rem;
+    z-index: 1;
     border-bottom: .1rem solid var(--color-grey);
     padding: 0;
     cursor: text;
