corrected outline and background to none instead of 0

--- a/form/07-styles.css
+++ b/form/07-styles.css
@@ -852,11 +852,11 @@
     padding-right: 2rem;
     height: 3rem;
     border: 0;
-    outline: 0;
+    outline: none;
     position: absolute;
     width: 0;
     right: 0;
-    background: 0;
+    background: none;
     cursor: pointer;
     z-index: 3;
     transition: width .4s cubic-bezier(0, 0.795, 0, 1);
